k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ac-portal
  labels:
    app: ac-portal
    component: frontend
spec:
  to:
    kind: Service
    name: ac-portal
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
